# hydra-server

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 0001_init.sql  0002_user_banners.sql  0003_artifact_shares.sql  0004_game_metadata_and_settings.sql  0005_playtime.sql  0006_game_artwork.sql  0007_game_artwork_size.sql
src/: achievements.rs  admin.rs  artifacts.rs  artwork.rs  auth.rs  config.rs  emulation.rs  error.rs  games.rs  images.rs  main.rs  members.rs  playtime.rs  settings.rs  shares.rs  sources.rs  state.rs  storage.rs  updates.rs
static/: admin.html
